# motionsplit

./: Cargo.toml
src/: extract.rs  extract_task.rs  file_task.rs  main.rs
