[package]
name = "motionsplit"
version = "0.1.0"
authors = ["Mark Hendriks <mark.hendriks@hybrit.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio"] }
iced_native = "0.4.0"
iced_futures = "0.3.0"
native-dialog = "0.5.5"
tokio = { version = "1.14", features = ["sync"] }
