[package]
name = "motionsplit"
version = "0.1.0"
authors = ["Mark Hendriks <contact@darkseraphim.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio"] }
iced_native = "0.4.0"
iced_futures = "0.3.0"
itertools = "0.10.3"
kamadak-exif = "0.5.4"
native-dialog = "0.5.5"
ring = "0.16.20"
regex = "1.5.4"
tokio = { version = "1.14", features = ["sync"] }
